--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
     <!-- Libraries -->
     <link rel="stylesheet" type="text/css" href="lib/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="lib/font-awesome-4.6.3/css/font-awesome.min.css">
     <script src="lib/localforage.min.js"></script>
     <script src="lib/ejs.min.js"></script>
     <script src="lib/moment.min.js"></script>
@@ -17,9 +18,12 @@
         <div class='row'>
             <div class='col-md-12'>
                 <input id='input-add-show' placeholder='Type a show title to add'>
-                <button id='button-add-show'>Add Show</button>
-                <button id='button-refresh-shows'>Refresh</button>
-                <p>Last updated: <span id='last-updated'></span></p>
+                <i id='button-add-show' class="fa fa-plus"></i>
+
+                <p>
+                    <i id='button-refresh-shows' class="fa fa-refresh"></i>
+                    Last updated: <span id='last-updated'></span>
+                </p>
             </div>
         </div>
     </div>
