--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="lib/ejs.min.js"></script>
     <script src="lib/moment.min.js"></script>
 
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="index.js"></script>
 </head>
 
@@ -18,8 +19,6 @@
         <div class='row'>
             <div class='col-md-12'>
                 <input id='input-add-show' placeholder='Type a show title to add'>
-                <i id='button-add-show' class="fa fa-plus"></i>
-
                 <p>
                     <i id='button-refresh-shows' class="fa fa-refresh"></i>
                     Last updated: <span id='last-updated'></span>
