Update ejs. Make seasons toggleable.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="lib/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="lib/font-awesome-4.6.3/css/font-awesome.min.css">
     <script src="lib/localforage.min.js"></script>
-    <script src="lib/ejs.min.js"></script>
+    <script src="lib/ejs_production.js"></script>
     <script src="lib/moment.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="styles.css">
