--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <head>
     <title>TV Showtimes</title>
 
-    <!-- Libraries -->
-    <link rel="stylesheet" type="text/css" href="lib/font-awesome-4.6.3/css/font-awesome.min.css">
+
+    <!--build:js -->
     <script src="lib/localforage.min.js"></script>
     <script src="lib/ejs_production.js"></script>
     <script src="lib/moment.min.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="lib/normalize.css">
-
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <!-- endbuild -->
     <script src="index.js"></script>
+
+    <!--build:css -->
+    <link rel="stylesheet" type="text/css" href="lib/font-awesome-4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="lib/normalize.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <!-- endbuild -->
+
 </head>
 
 <body>
