--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <h1 id="foo"></h1>
     <div>
         <div id="sidebar">
             <input id='input-add-show' placeholder='Type a show title to add'>
