Update build process

--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
     <meta name="viewport" content="width=device-width">
     <title>TV Showtimes</title>
 
-
     <!--build:js -->
-    <script src="lib/localforage.min.js"></script>
+    <script src="node_modules/localforage/dist/localforage.min.js"></script>
     <script src="lib/ejs_production.js"></script>
-    <script src="lib/moment.min.js"></script>
-    <!-- endbuild -->
+    <script src="node_modules/moment/min/moment.min.js"></script>
     <script src="index.js"></script>
+    <!-- endbuild -->
 
     <!--build:css -->
-    <link rel="stylesheet" type="text/css" href="lib/font-awesome-4.6.3/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="lib/normalize.css">
+    <link rel="stylesheet" type="text/css" href="node_modules/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="node_modules/normalizecss/normalize.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <!-- endbuild -->
 
