--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
             <p>
                 <i id='button-refresh-shows' class="fa fa-refresh"></i>
                 Last updated: <span id='last-updated'></span>
+                <i id='export-button' class="fa fa-download"></i>
+                <i id='import-button' class="fa fa-upload"></i>
             </p>
             <hr>
         </div>
         <div id="show-content"></div>
     </div>
+
+    <a id="download-link" class="hidden"></a>
+    <input id="upload-input" class="hidden" type="file"></input>
 
 </body>
